@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
     <category label="Beállítások">
+        <setting label="Weboldal címe" type="text" id="filmpapa_base" default="https://letoltes.club/filmpapa/"/>
         <setting label="Részletes információ előtöltése" type="bool" id="infopreload" default="False"/>
         <setting label="Felirat letöltésének kísérlete" type="bool" id="downloadsubtitles" default="True"/>
 	</category>
